# pytest_attempt_summary

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  ui-integration.md
pytest_attempt_summary/: attempt_diff.py  attempt_summary.py  attempt_view.py  failure_panel.py  plugin.py  retry_insight.py
pytest_attempt_summary.egg-info/: PKG-INFO
pytest_attempt_summary/scripts/: attempt_summary.js
pytest_attempt_summary/styles/: attempt_summary.css
pytest_attempt_summary/templates/: attempt_summary.html  attempt_view_cards.html  failure_panel.html  trace_block.html
pytest_attempt_summary/utils/: template_loader.py
