[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-attempt-summary"
version = "0.1.0"
description = "Enhanced Allure Attempt Summary for Playwright + Pytest"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pytest>=7.0",
    "allure-pytest>=2.13"
]

classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
]


# ⭐ pytest 插件注册（最关键）
[project.entry-points.pytest11]
attempt_summary = "pytest_attempt_summary.plugin"


# ⭐ 包发现（等价于 find_packages()）
[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_attempt_summary*"]


# ⭐ 非 Python 文件（等价于 package_data）
[tool.setuptools.package-data]
pytest_attempt_summary = [
    "templates/*.html",
    "styles/*.css",
    "scripts/*.js"
]